--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,25 +1,25 @@
-
-div#root {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* menu */
+.menu {
+  display: flex;
 }
+
+.menu-item {
+  width: 300px;
+  margin: 1rem;
+}
+
+.menu-item img {
+  height: 200px;
+  width: 200px;
+}
+
+
+
+
+
