--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -86,3 +86,21 @@
 .selected-table {
   background-color: yellow;
 }
+
+/* NavBar */
+.nav-link{
+  display: inline-block;
+  box-sizing: border-box;
+  width: 60px;
+  padding: 5px;
+  margin: 0 6px 6px;
+  background: grey;
+  text-decoration: none;
+  text-align: center;
+  font-size: min(10vw, 15px) ;
+  color: white;
+}
+
+.active {
+  color: yellow
+}
