--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+/* header */
+#header-image {
+  max-width: 100%;
+  height: auto;
+}
+
 /* menu */
 .menu {
   display: flex;
