--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -95,19 +95,45 @@
 }
 
 /* NavBar */
+.nav-bar {
+  display: flex;
+  justify-content: center;
+}
+
+.nav-home {
+  flex-direction: column;
+  align-items: center;
+  padding-top: 5%;
+}
+
 .nav-link{
   display: inline-block;
   box-sizing: border-box;
-  width: 60px;
+  width: 100px;
   padding: 5px;
   margin: 0 6px 6px;
-  background: grey;
+  background: black;
   text-decoration: none;
   text-align: center;
   font-size: min(10vw, 15px) ;
-  color: white;
+  color: pink;
+  border-radius: 10px / 5px;
+}
+
+.home-link{
+  display: inline-block;
+  box-sizing: border-box;
+  width: 150px;
+  padding: 5px;
+  margin: 0 15px 15px;
+  background: black;
+  text-decoration: none;
+  text-align: center;
+  font-size: min(10vw, 18px) ;
+  color: pink;
+  border-radius: 10px / 5px;
 }
 
 .active {
-  color: yellow
+  color: gold
 }
