--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -32,7 +32,7 @@
   margin: 0;
 }
 
-/* Manage Reservations */
+/* Staff Page */
 #manage-reservations h3{
   text-align: center;
   border-bottom: 1px black solid;
@@ -46,15 +46,21 @@
   align-items: flex-start;
 }
 
+.table-form {
+  display: inline-block;
+  width: 50%;
+  text-align: center;
+}
+
+/* Reseravation List */
 #reservation-filter {
   flex: 40%;
   padding: 10px;
 }
 
-#reservation-filter div > label, select, h4, ul {
+#reservation-filter div > label, h4, ul {
     padding: 10px;
   }
-
 
 #reservation-list {
   list-style-type: none;
@@ -62,21 +68,31 @@
 
 #reservation-list li {
   padding: 5px;
-  margin-right: 25%;
   border: 1px black solid;
 }
 
-#reserved-tables {
-  flex: 60%;
+#res-edit {
+  margin-top: 5px;
+  border-top: 1px black solid;
+  padding-top: 5px;
 }
 
-#reserved-tables h4 {
+/* table chart */
+#table-section {
+  flex: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+}
+
+#table-section h4 {
   text-align: center;
 }
 
 #table-chart {
   display: grid;
-  grid-template-columns: 30% 30% 30%;
+  grid-template-columns: 33% 33% 33%;
 }
 
 #table {
@@ -91,7 +107,7 @@
 }
 
 .selected-table {
-  background-color: yellow;
+  background-color: gold;
 }
 
 /* NavBar */
