--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -8,6 +8,7 @@
 h2 {
   font-family: 'Architects Daughter', cursive;
   text-align: center;
+  font-size: 175%;
   padding: 15px;
 }
 
@@ -39,6 +40,16 @@ h2 {
 .menu-item img {
   height: 200px;
   width: 200px;
+}
+
+.menu-item h3 {
+  font-size: 95%;
+}
+
+.menu-item p {
+  opacity: 95%;
+  font-size: 90%;
+  font-style: italic;
 }
 
 /* form */
@@ -160,18 +171,12 @@ h2 {
   justify-content: center;
 }
 
-.nav-home {
-  flex-direction: column;
-  align-items: center;
-  padding-top: 5%;
-}
-
-.nav-link, .home-link {
+.nav-link {
   display: inline-block;
   box-sizing: border-box;
-  width: 100px;
-  padding: 5px;
-  margin: 0 6px 6px;
+  width: 125px;
+  padding: 10px 5px;
+  margin: 6px;
   background: black;
   text-decoration: none;
   text-align: center;
@@ -180,13 +185,40 @@ h2 {
   border-radius: 10px / 5px;
 }
 
+ /* NavBar Home */
+.nav-home {
+  flex-direction: column;
+  align-items: center;
+  padding: 25%;
+  background-image: url("/src/data/sushi-background.gif");
+  background-size: 100%;
+}
+
+.home-link {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 125px;
+  padding: 12px 7px;
+  margin: 8px;
+  background: black;
+  text-decoration: none;
+  text-align: center;
+  font-size: min(10vw, 15px) ;
+  color: pink;
+  border-radius: 10px / 5px;
+  opacity: 80%;
+}
+
+/* NavBar Effects */
 .nav-link:hover,
 .home-link:hover,
 .nav-link:focus,
 .home-link:focus,
 .active {
+  opacity: 100%;
   color: gold;
   font-weight: bold;
+  opacity: 100%;
 }
 
 .disabled {
