--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -169,14 +169,15 @@ h2 {
 .nav-bar {
   display: flex;
   justify-content: center;
+  /* background: black; */
 }
 
 .nav-link {
   display: inline-block;
   box-sizing: border-box;
   width: 125px;
-  padding: 10px 5px;
-  margin: 6px;
+  padding: 10px 6px;
+  margin: 8px 15px;
   background: black;
   text-decoration: none;
   text-align: center;
@@ -189,9 +190,10 @@ h2 {
 .nav-home {
   flex-direction: column;
   align-items: center;
-  padding: 25%;
+  padding: 23%;
   background-image: url("/src/data/sushi-background.gif");
   background-size: 100%;
+  background-repeat: no-repeat;
 }
 
 .home-link {
@@ -199,7 +201,7 @@ h2 {
   box-sizing: border-box;
   width: 125px;
   padding: 12px 7px;
-  margin: 8px;
+  margin-bottom: 15px;
   background: black;
   text-decoration: none;
   text-align: center;
