--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -163,7 +163,7 @@ h2 {
 }
 
 .selected-table {
-  background-color: gold;
+  background-color: #fee400;
 }
 
 /* NavBar */
@@ -183,7 +183,7 @@ h2 {
   text-decoration: none;
   text-align: center;
   font-size: min(10vw, 15px) ;
-  color: pink;
+  color: #f69a97;
   border-radius: 10px / 5px;
 }
 
@@ -203,13 +203,12 @@ h2 {
   width: 125px;
   padding: 12px 7px;
   margin-bottom: 15px;
-  background: black;
+  background: rgba(0, 0, 0, .80);
   text-decoration: none;
   text-align: center;
   font-size: min(10vw, 15px) ;
-  color: pink;
+  color: #f69a97;
   border-radius: 10px / 5px;
-  opacity: 80%;
 }
 
 /* NavBar Effects */
@@ -218,8 +217,8 @@ h2 {
 .nav-link:focus,
 .home-link:focus,
 .active {
-  opacity: 100%;
-  color: gold;
+  background: black;
+  color: #fee400;
   font-weight: bold;
   opacity: 100%;
 }
@@ -237,7 +236,7 @@ h2 {
  #footer {
   padding: 50px;
   background-color: #000000;
-  color: white;
+  color: rgb(254, 228, 0, .75);
   text-align: center;
   font-size: 55%;
   font-style: italic;
