--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -12,7 +12,7 @@ h2 {
   padding: 15px;
 }
 
-/* header */
+/* Header */
 #header {
   background-color: #000000;
   text-align: center;
@@ -24,153 +24,10 @@ h2 {
   max-height: 200px;
 }
 
-/* menu */
-.menu {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom: 10%;
-}
-
-.menu-item {
-  width: 300px;
-  margin-bottom: 1rem;
-  text-align: center;
-}
-
-.menu-item img {
-  height: 200px;
-  width: 200px;
-}
-
-.menu-item h3 {
-  font-size: 95%;
-}
-
-.menu-item p {
-  opacity: 95%;
-  font-size: 90%;
-  font-style: italic;
-}
-
-/* form */
-.reservation {
-  text-align: center;
-  margin: 0;
-}
-
-/* Contact Us */
-
-.contact div {
-  text-align: center;
-  padding-bottom: 15px;
-}
-
-/* Login */
-.login {
-  text-align: center;
-  padding: 15px;
-}
-
-.login form, button {
-  padding-bottom: 5px;
-}
-
-/* Staff Page */
-#manage-reservations {
-  margin-right: 5%;
-  margin-left: 5%;
-}
-
-#manage-reservations h3{
-  text-align: center;
-  border-bottom: 1px black solid;
-}
-
-#reservation-display {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-around;
-  align-items: flex-start;
-}
-
-.table-form {
-  display: inline-block;
-  width: 50%;
-  text-align: center;
-}
-
-/* Reseravation List */
-#reservation-filter {
-  flex: 40%;
-  padding: 10px;
-}
-
-#reservation-filter div > label, h4, ul {
-    padding: 10px;
-  }
-
-#reservation-list {
-  list-style-type: none;
-  max-height: 500px;
-  overflow-y: scroll;
-  scrollbar-width: thin;
-}
-
-#reservation-list li {
-  padding: 5px;
-  border: 1px black solid;
-}
-
-.selected-res {
-  background-color: lightgray;
-}
-
-#res-edit {
-  margin-top: 5px;
-  border-top: 1px black solid;
-  padding-top: 5px;
-}
-
-/* table chart */
-#table-section {
-  flex: 60%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 10px;
-}
-
-#table-section h4 {
-  text-align: center;
-}
-
-#table-chart {
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
-}
-
-#table {
-  padding: 10px;
-  border: 1px black solid;
-  margin: 10px;
-  text-align: center;
-}
-
-.reserved-table {
-  background-color: lightgray;
-}
-
-.selected-table {
-  background-color: #fee400;
-}
-
 /* NavBar */
 .nav-bar {
   display: flex;
   justify-content: center;
-  /* background: black; */
 }
 
 .nav-link {
@@ -232,7 +89,157 @@ h2 {
   text-decoration-line: underline;
 }
 
-/* footer */
+/* Menu */
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 10%;
+}
+
+.menu-item {
+  width: 300px;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.menu-item img {
+  height: 200px;
+  width: 200px;
+}
+
+.menu-item h3 {
+  font-size: 95%;
+}
+
+.menu-item p {
+  opacity: 95%;
+  font-size: 90%;
+  font-style: italic;
+}
+
+/* Reservations Form */
+.reservation, .reservation-form {
+  text-align: center;
+  margin: 0;
+}
+
+.reservation-form {
+  margin: 0 20%;
+}
+
+.reservation button[type="submit"] {
+  background-color: pink;
+}
+
+/* Contact Us */
+
+.contact div {
+  text-align: center;
+  padding-bottom: 15px;
+}
+
+/* Login */
+.login {
+  text-align: center;
+  padding: 15px;
+}
+
+.login form, button {
+  padding-bottom: 5px;
+}
+
+/* Staff Page */
+#manage-reservations {
+  margin-right: 5%;
+  margin-left: 5%;
+}
+
+#manage-reservations h3{
+  text-align: center;
+  border-bottom: 1px black solid;
+}
+
+#reservation-display {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.table-form {
+  display: inline-block;
+  width: 50%;
+  text-align: center;
+}
+
+/* Reservation List */
+#reservation-filter {
+  flex: 40%;
+  padding: 10px;
+}
+
+#reservation-filter div > label, h4, ul {
+    padding: 10px;
+  }
+
+#reservation-list {
+  list-style-type: none;
+  max-height: 500px;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+}
+
+#reservation-list li {
+  padding: 5px;
+  border: 1px black solid;
+}
+
+.selected-res {
+  background-color: lightgray;
+}
+
+#res-edit {
+  margin-top: 5px;
+  border-top: 1px black solid;
+  padding-top: 5px;
+}
+
+/* Table Chart */
+#table-section {
+  flex: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+}
+
+#table-section h4 {
+  text-align: center;
+}
+
+#table-chart {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+}
+
+#table {
+  padding: 10px;
+  border: 1px black solid;
+  margin: 10px;
+  text-align: center;
+}
+
+.reserved-table {
+  background-color: lightgray;
+}
+
+.selected-table {
+  background-color: #fee400;
+}
+
+/* Footer */
  #footer {
   padding: 50px;
   background-color: #000000;
