DONE logout button appears selected when on staff page

--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -85,6 +85,13 @@ h2 {
   opacity: 0.75;
 }
 
+.login-active {
+  text-decoration-line: underline;
+  color: #fee400;
+  font-weight: bold;
+  opacity: 100%;
+}
+
 .active {
   text-decoration-line: underline;
 }
