fix: footer; add: responsive buttons & background on viewport change for home & menu; change: resize menu items to better fit description

--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -27,19 +27,19 @@ h2 {
 /* NavBar */
 .nav-bar {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly
 }
 
 .nav-link {
   display: inline-block;
-  box-sizing: border-box;
-  width: 125px;
+  min-width: 75px;
+  font-size: 80%;
   padding: 10px 6px;
-  margin: 8px 15px;
+  margin-top: 8px;
+
   background: black;
   text-decoration: none;
   text-align: center;
-  font-size: min(10vw, 15px) ;
   color: #f69a97;
   border-radius: 10px / 5px;
 }
@@ -47,25 +47,24 @@ h2 {
  /* NavBar Home */
 .nav-home {
   flex-direction: column;
-  align-items: center;
-  padding: 15% 0 25% 0;
+  justify-content: start;
+  padding: 50% 50%;
   background-image: url("/src/data/sushi-background.gif");
-  background-size: 100%;
   background-repeat: no-repeat;
-  background-color: #000000;
-  margin: auto;
+  background-color: black;
+  background-position: center;
+  background-size: cover;
+  min-height: 100vh;
 }
 
 .home-link {
   display: inline-block;
-  box-sizing: border-box;
   width: 125px;
   padding: 12px 7px;
   margin-bottom: 15px;
   background: rgba(0, 0, 0, .80);
   text-decoration: none;
   text-align: center;
-  font-size: min(10vw, 15px) ;
   color: #f69a97;
   border-radius: 10px / 5px;
 }
@@ -107,24 +106,26 @@ h2 {
 }
 
 .menu-item {
-  width: 300px;
-  margin-bottom: 1rem;
+  width: 250px;
+  margin: 1rem;
   text-align: center;
 }
 
 .menu-item img {
-  height: 200px;
-  width: 200px;
+  height: 250px;
+  width: 250px;
 }
 
 .menu-item h3 {
   font-size: 95%;
+  padding-top: 2px;
 }
 
 .menu-item p {
   opacity: 95%;
-  font-size: 90%;
+  font-size: 85%;
   font-style: italic;
+  padding-top: 6px;
 }
 
 /* Reservations Form */
@@ -336,53 +337,63 @@ h2 {
 
 /* Footer */
  #footer {
+  
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.layout {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer {
   padding: 50px;
   background-color: #000000;
   color: rgb(254, 228, 0, .75);
   text-align: center;
   font-size: 55%;
   font-style: italic;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+  padding: 50px 0;
 }
 
-@media only screen and (max-width: 800px) {
-  #footer {
-    position: absolute;
-  }
-
+@media (min-width: 650px) {
   .nav-home {
-    padding: 20% 0 50% 0;
+    padding: 30% 50%;
   }
 
-  .home-link {
-    display: inline-block;
-    box-sizing: border-box;
-    width: 100px;
-    padding: 12px 7px;
-    margin-bottom: 15px;
-    background: rgba(0, 0, 0, .80);
-    text-decoration: none;
-    text-align: center;
-    font-size: 80% ;
-    color: #f69a97;
-    border-radius: 10px / 5px;
-  }
-
-  
-  .nav-link:hover,
-  .home-link:hover,
-  .nav-link:focus,
-  .home-link:focus,
-  .active {
-    background: black;
-    color: #fee400;
-    font-weight: bold;
-    opacity: 100%;
-  }
-
-  .active {
-    text-decoration-line: underline;
+  .nav-link {
+    width: 125px;
   }
 }
+
+@media (min-width: 950px) {
+  .nav-home {
+    padding: 20% 50%;
+  }
+
+  .nav-bar {
+    justify-content: center;
+  }
+
+  .nav-link {
+    width: 125px;
+    margin: 8px 15px;
+    font-size: 100%;
+  }
+}
+
+
+@media (min-width: 1150px) {
+  .nav-home {
+    padding: 15% 50%;
+    background-size: 1300px;
+    background-repeat: repeat-x;
+  }
+  
+}
+
+
+
+
