--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -233,21 +233,53 @@ h2 {
   margin: 10px;
 }
 
-
-/* Contact Us */
-.contact div {
-  text-align: center;
-  padding-bottom: 15px;
-}
-
 /* Login */
 .login {
   text-align: center;
-  padding: 15px;
+  min-height: 75vh;
 }
 
-.login form, button {
-  padding-bottom: 5px;
+.login-form {
+  margin: 0 5%;
+  padding: 30px;
+  border-style: groove;
+}
+
+.login-form p {
+  margin-bottom: 12px;
+  font-size: 80%;
+}
+
+.login-form input {
+  padding: 3px;
+  font-size: 80%;
+}
+
+.login-form button {
+  padding: 5px;
+  font-size: 80%;
+  margin: 20px 0 30px 0;
+}
+
+/* Contact Us */
+.contact {
+  text-align: center;
+  padding-bottom: 15px;
+  min-height: 75vh;
+}
+
+.contact-info {
+  margin: 0 5%;
+  padding: 30px;
+  border-style: groove;
+}
+
+.contact-info div{
+  padding-bottom: 30px;
+}
+
+.contact-info p {
+  font-size: 80%;
 }
 
 /* Staff Page */
@@ -293,7 +325,6 @@ h2 {
   overflow-y: scroll;
   scrollbar-width: thin;
   margin-bottom: 75px;
-
 }
 
 #reservation-list li {
@@ -345,13 +376,6 @@ h2 {
 }
 
 /* Footer */
- #footer {
-  
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
 .layout {
   display: flex;
   flex-direction: column;
@@ -392,7 +416,7 @@ h2 {
     font-size: 100%;
   }
 
-  .reservation-form {
+  .reservation-form, .login-form, .contact-info{
     max-width: 840px;
     margin: auto;
   }
@@ -402,12 +426,17 @@ h2 {
   #form-input label,
   #form-input input,
   .reservation button[type="submit"],
-  .reservation button[type="button"] {
+  .reservation button[type="button"],
+  .login-form p,
+  .login-form input,
+  .login-form button,
+  .contact-info p {
     font-size: 90%;
   }
-
+    
   #form-select select,
-  #form-input input {
+  #form-input input,
+  .login-form input {
     padding: 5px;
   }
   
@@ -437,12 +466,17 @@ h2 {
   #form-input label,
   #form-input input,
   .reservation button[type="button"],
-  .reservation button[type="submit"] {
+  .reservation button[type="submit"],
+  .login-form p,
+  .login-form input,
+  .login-form button,
+  .contact-info p {
     font-size: 100%;
   }
 
   #form-select select,
-  #form-input input {
+  #form-input input,
+  .login-form input {
     padding: 8px;
   }
 
